--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 appdirs==1.4.0
+astroid==1.4.9
+backports.functools-lru-cache==1.3
+configparser==3.5.0
 funcsigs==1.0.2
+isort==4.2.5
+lazy-object-proxy==1.2.2
+mccabe==0.6.1
 mock==2.0.0
 numpy==1.12.0
 packaging==16.8
 pbr==1.10.0
 protobuf==3.2.0
+py==1.4.32
+pylint==1.6.5
 pyparsing==2.1.10
+pytest==3.0.6
+requests==2.13.0
 six==1.10.0
 tensorflow==1.0.0
+wrapt==1.10.8
+yapf==0.16.0
